# roammand

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  Cargo.toml  LICENSES.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  buf.gen.yaml  buf.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/actions/setup-ci-tools/: action.yml
.github/workflows/: ci.yml  dependency-review.yml
apps/client_flutter/: .gitignore  README.md  pubspec.yaml
apps/client_flutter/apple/: Signing.local.xcconfig.example  Signing.xcconfig
apps/client_flutter/ios/: Podfile
apps/client_flutter/lib/: main.dart
apps/client_flutter/macos/: Podfile
apps/client_flutter/test/: app_locale_controller_test.dart  app_settings_page_test.dart  app_uninstaller_test.dart  controller_pairing_engine_test.dart  controller_session_identity_test.dart  desktop_app_bar_test.dart  (+55 more)
brand/: README.md  README.zh-CN.md
conformance/protocol_vectors/: canonical_transcript_v1.json  canonical_transcript_v1_invalid.json  identity_derivation_v1.json  local_ipc_v1.json  pairing_crypto_v1.json
conformance/wordlists/: NOTICE.md
crates/host-agent/: Cargo.toml  build.rs
crates/host-agent/src/: authorization.rs  grant_store.rs  identity.rs  lib.rs  main.rs  pairing.rs  pairing_crypto.rs  remote_reconnect.rs  remote_runtime.rs  remote_session.rs  remote_session_bridge.rs  remote_session_native.rs  remote_session_state.rs  runtime.rs  service.rs  session_auth.rs  sessions.rs  signaling.rs
crates/host-agent/src/signaling/: transport.rs
crates/host-agent/tests/: authorization.rs  flutter_ipc_fixture.rs  grant_store.rs  identity.rs  pairing.rs  privacy_debug.rs  privileged_runtime.rs  process_lifecycle.rs  remote_session.rs  revocation.rs  service.rs  session_auth.rs  signaling_client.rs
crates/host-platform/: Cargo.toml
crates/host-platform/src/: input.rs  lib.rs  local_transport.rs  macos_input.rs  macos_keychain.rs  restricted_fs.rs  runtime_paths.rs  secret_store.rs  unix_transport.rs  windows_dpapi.rs  windows_input.rs  windows_security.rs  windows_transport.rs
crates/host-platform/tests/: input_contract.rs  macos_input.rs  macos_keychain.rs  restricted_fs.rs  secret_store_contract.rs  unix_transport.rs  windows_dpapi.rs  windows_input.rs  windows_transport.rs
crates/host-webrtc/: Cargo.toml  build.rs
crates/host-webrtc/src/: config.rs  input.rs  lib.rs  peer.rs  session.rs
crates/host-webrtc/src/native/: capture.rs  mod.rs  peer.rs
crates/host-webrtc/src/native/capture/: macos.rs
crates/host-webrtc/tests/: input.rs  lifecycle.rs  native_peer.rs  privacy_debug.rs  session.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: auth.rs  framing.rs  lib.rs  protocol.rs
crates/ipc/tests/: auth.rs  framing.rs
crates/privileged-bridge/: Cargo.toml  build.rs
crates/privileged-bridge/src/: auth.rs  broker.rs  client.rs  connector.rs  framing.rs  helper.rs  indicator.rs  indicator_copy.rs  installed.rs  lease.rs  lib.rs  macos_indicator_runtime.rs  macos_peer_runtime.rs  native_helper.rs  native_indicator.rs  peer_identity.rs  proxy.rs  rpc.rs  runtime.rs  session.rs  status.rs  transport.rs  unix_runtime.rs  windows_indicator_runtime.rs  windows_process_runtime.rs  windows_runtime.rs
crates/privileged-bridge/src/macos/: indicator.rs  mod.rs  peer.rs  session.rs  transport.rs
crates/privileged-bridge/src/windows/: desktop.rs  indicator.rs  mod.rs  peer.rs  process.rs  sas.rs  service.rs  transport.rs
crates/privileged-bridge/tests/: authentication.rs  broker_protocol.rs  client_connector.rs  client_wire.rs  framing.rs  helper_protocol.rs  indicator.rs  installed_config.rs  lease.rs  macos_contract.rs  native_indicator.rs  peer_identity.rs  proxy_peer.rs  rpc_transport.rs  runtime_chain.rs  session_transitions.rs  unix_runtime.rs  windows_contract.rs
docs/: BUILDING.md  BUILDING.zh-CN.md
docs/architecture/: README.md  README.zh-CN.md  account-free-pairing-v1.md  desktop-identity-ipc-v1.md  desktop-webrtc-v1.md  mobile-controller-v1.md  privileged-session-bridge-v1.md  protocol-v1.md  reconnect-v1.md  signaling-v1.md
docs/operations/: README.md  README.zh-CN.md  final-product-acceptance.md  official-infrastructure-plan.md  official-infrastructure-plan.zh-CN.md
docs/security/: README.md  README.zh-CN.md  privacy-safe-diagnostics.md  privileged-helper-threat-model.md
docs/self-hosting/: docker-compose.md  docker-compose.zh-CN.md
docs/testing/: README.md  README.zh-CN.md  desktop-session.md  mobile-controller.md  pairing.md  platform-acceptance.md  reliability-and-privacy.md
docs/user-guide/: README.md  README.zh-CN.md
infra/compose/: .env.example  compose.yaml  coturn-entrypoint.sh
packaging/macos/: ENTITLEMENTS.md  README.md  dev.roammand.HostAgent.plist  dev.roammand.PrivilegedBridge.plist  dev.roammand.SessionAgent.plist
packaging/windows/: README.md  RoammandPrivilegedBridge.xml
scripts/: apple_signing_common.sh  build_macos_pkg.sh  build_macos_universal_agents.sh  check_apple_release_preflight.sh  check_generation_failure_atomicity.sh  check_go_format.sh  check_libwebrtc_assets.sh  check_m4_lifecycle.sh  check_m5_lifecycle.sh  check_m6_lifecycle.sh  check_m7_privacy.sh  check_m7_reconnect.sh  check_m7_self_hosting.sh  check_m8_bridge_contract.sh  check_m8_macos_package.sh  check_m8_privacy.sh  check_m8_windows_package.ps1  check_public_boundary.sh  check_readme_contract.sh  check_schema_contract.sh  configure_apple_signing.sh  doctor.sh  fetch_libwebrtc.sh  generate_macos_release_compliance.py  generate_protocol.sh  install_m8_macos.sh  install_m8_windows.ps1  libwebrtc-assets.sha256  notarize_macos_pkg.sh  package_m8_macos.sh  package_m8_windows.ps1  render_brand_assets.py  render_brand_assets_macos.sh  run_m4_smoke.sh  run_m5_smoke.sh  run_m6_smoke.sh  run_m7_smoke.sh  run_m7_soak.sh  run_m8_smoke.sh  run_quiet_workflow.sh  (+19 more)
scripts/macos_release_compliance/: __init__.py  collectors.py  model.py  render.py  vetted_cargo_notices.py
services/signaling/: .dockerignore  Dockerfile  Dockerfile.dockerignore  go.mod  go.sum
(+181 files in other folders)
