[package]
name = "roammand-host-agent"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
native-webrtc = [
  "roammand-host-platform/native-webrtc",
  "roammand-host-webrtc/native-webrtc",
  "roammand-privileged-bridge/native-webrtc",
]

[dependencies]
ed25519-dalek = "3.0.0"
futures-util = { version = "0.3.31", features = ["sink"] }
getrandom = "0.4.3"
roammand-host-platform = { path = "../host-platform" }
roammand-host-webrtc = { path = "../host-webrtc" }
roammand-ipc = { path = "../ipc" }
roammand-privileged-bridge = { path = "../privileged-bridge" }
roammand-protocol = { path = "../../gen/rust" }
prost = "0.14.4"
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std"] }
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
zeroize = "1.9.0"
url = "2.5.8"

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.149"
tempfile = "3.27.0"
