[package]
name = "roammand-host-webrtc"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"

[features]
default = []
native-webrtc = [
  "dep:cxx",
  "dep:core-graphics",
  "dep:futures",
  "dep:libwebrtc",
  "dep:livekit-protocol",
  "dep:webrtc-sys",
]

[dependencies]
futures = { version = "0.3.32", optional = true }
libwebrtc = { version = "=0.3.27", default-features = false, optional = true }
livekit-protocol = { version = "=0.7.2", optional = true }
roammand-protocol = { path = "../../gen/rust" }
thiserror = "2.0.18"
webrtc-sys = { version = "=0.3.25", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25.0", optional = true }
cxx = { version = "1.0", optional = true }

[dev-dependencies]
prost = "0.13.5"
tokio = { version = "1.52.3", features = ["macros", "rt", "time"] }
